# ontogenetic-intelligence

./: .env.example  Cargo.toml  LICENSE  Makefile  README.md  deploy_dashboard.sh  go.mod  package.json  requirements.txt  run_dashboard.sh  test_api_setup.py
.github/workflows/: deploy.yml
docs/: API_SETUP_GUIDE.md  MINI_OS_ROADMAP.md
examples/: medical_diagnosis.py
scripts/: air-gap-verify.sh  build-mini-os.sh  publish_ogi_content.py
src/: ogi_simulation.py  social_api_integration.py
web-interface/: package.json  tailwind.config.js
web-interface/public/: index.html  manifest.json
web-interface/src/: App.css  App.js  index.css
web-interface/src/components/: OGISimulation.jsx
